--- a/main.tex
+++ b/main.tex
@@ -39,6 +39,7 @@
 %\usepackage{newtxtext}
 
 \newcommand\chiara[1]{{\color{blue}{#1}}\xspace}
+\newcommand\federico[1]{{\color{brown}{#1}}\xspace}
 
 \usepackage{amssymb,amsmath}
 \newcommand{\nd}{\texttt{NegDis}\xspace}
