--- a/main.tex
+++ b/main.tex
@@ -77,7 +77,7 @@
 \begin{document}
 %
 %\title{A literature-based business process meta-model}
-\title{Shape Your Process: Discovering Business Processes from Positive and Negative Traces Taking into Account \chiara{Expert} User Preferences}
+\title{Shape Your Process: Discovering Business Processes from Positive and Negative Traces Taking into Account  User Preferences}
 %\title{Digging into BPM meta-models: criticalities and ideas towards solutions}
 
 %
@@ -113,8 +113,7 @@ Process discovery techniques focus on learning a process model starting from a g
 Sometimes, however, too many possible sets of constraints might be available, thus nullifying the discovery effort. Therefore, some preference criteria would be helpful to guide the discovery process towards a set of constraints among the many. 
 %In this work we leverage our previous approach to provide the possibility, from the user viewpoint, of specifying preferences over trace activities and Declare templates. Such preferences are used to guide the discovery process, so that the output model will include, if possible, the preferred constraints. The user, through the preferences, instructs the discovery algorithm for looking for certain models: in other terms, some user knowledge on the desired outcome is exploited in the discovery process.
 In this work, we present an approach for the discovery of declarative models providing the possibility, from the user viewpoint, of specifying preferences on activities and constraint templates to be used to build the final set of constraints. Such preferences are used to guide the discovery process, so that the output set will include, if possible, the preferred constraints, thus exploiting some \chiara{expert} knowledge about the desired outcome. The approach is grounded in a logic-based framework that provides a sound and formal meaning to the notion of \chiara{expert} preferences.
-
-\keywords{Process mining \and process discovery \and declarative process models \and deviant traces.}
+%\keywords{Process mining \and process discovery \and declarative process models \and deviant traces.}
 \end{abstract}
 %
 %
