--- a/example.tex
+++ b/example.tex
@@ -2,7 +2,7 @@
 
 \section{The modeling language}
 \label{sec:prel}
-The discovery approach we introduce in this paper is based on \declare. \declare is a language for describing declarative process models first introduced
+The discovery approach we introduce in this paper is based on \declare, a language for describing declarative process models first introduced
 in~\cite{DBLP:conf/edoc/PesicSA07}. A \declare model consists of a set of constraints applied to
 (atomic) activities. Constraints are, in turn, based on templates. Templates are
 abstract parameterized patterns and constraints are their concrete
@@ -64,10 +64,8 @@ contains only one trace (composed of
 %\mathsf{M_1} & = \{ \mathsf{response(requestEval, notifyOutcome)}\} \\
 %\mathsf{M_2} & = \{ \mathsf{existence(notifyOutcome)}\}
 M_1 & = \{ \mathsf{response(requestEval, notifyOutcome)}\} \\
-M_2 & = \{ \mathsf{existence(notifyOutcome)}\}
+M_2 & = \{ \mathsf{existence(notifyOutcome)}\} \quad \qed
 \end{align*}
-%
-\qed
 %
 \end{example}
 
@@ -95,26 +93,28 @@ Let us assume %suppose
 %
 \begin{align*}
 %P
-L^+ & = \{\ \langle \mathsf{a}, \mathsf{b}\rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} \\
+L^+  = \{\ \langle \mathsf{a}, \mathsf{b}\rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} && 
 %N
-L^- & = \{\ \langle \mathsf{a}\rangle,\ \langle \mathsf{b} \rangle \ \}
+L^-  = \{\ \langle \mathsf{a}\rangle,\ \langle \mathsf{b} \rangle \ \}
 \end{align*}
 %
 Alternative models allowing us to represent the traces that belong to $L^+$ %$P$
 and exclude the ones that belong to $L^-$ %$N$
 are:%distinguish traces belonging to the two sets are:
-\begin{align*}
+
+
+{\small{\begin{align*}
 %\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
 %\mathsf{M_2} & = \{ \mathsf{existence(a), responded\_existence(a, b)}\} \\
 %\mathsf{M_3} & = \{ \mathsf{existence(b), responded\_existence(b, a)}\} \\
 %\mathsf{M_4} & = \{ \mathsf{existence(a), co\_existence(a, b)}\} \\
 %\mathsf{M_5} & = \{ \mathsf{existence(b), co\_existence(a, b)}\}
-M_1 & = \{ \mathsf{existence(a),existence(b)}\} \\
+M_1 & = \{ \mathsf{existence(a),existence(b)}\}\\
 M_2 & = \{ \mathsf{existence(a), responded\_existence(a, b)}\} \\
 M_3 & = \{ \mathsf{existence(b), responded\_existence(b, a)}\} \\
 M_4 & = \{ \mathsf{existence(a), co\_existence(a, b)}\} \\
 M_5 & = \{ \mathsf{existence(b), co\_existence(a, b)}\}
-\end{align*}
+\end{align*}}}
 %
 
 From a %the
@@ -144,18 +144,19 @@ Notice also that Example \ref{ex:unaryVsBinary} might mislead the reader to thin
 Let us consider the following log:
 \begin{align*}
 %P
-L^+& = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle\ \} \\
+L^+ = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle\ \} &&
 %N
-L^-& = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
+L^- = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
 \end{align*}
 %
-Two alternative models that accept the positive examples and reject the negative ones are:
-\begin{align*}
+Two alternative models that accept the positive traces and reject the negative ones are:
+{\small{\begin{align*}
 %\mathsf{M_1} & = \{ \mathsf{absence2(a),response(a,b)}\} \\
 %\mathsf{M_2} & = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
-M_1 & = \{ \mathsf{absence2(a),response(a,b)}\} \\
-M_2 & = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
+M_1  = \{ \mathsf{absence2(a),response(a,b)}\} &&
+M_2  = \{ \mathsf{absence2(a),alternate\_response(a, b)}\}
 \end{align*}
+}}
 Models $M_1$ and $M_2$  %$\mathsf{M_1}$ and $\mathsf{M_2}$
 are equivalent due to the interplay of the constraint \textsf{absence2} with the the \textsf{response} and the \textsf{alternate\_response} constraints: roughly speaking, being activity \textsf{a} forbidden to appear more than once, the effects of the stricter constraint \textsf{alternate\_reponse} are nullified.
 \qed
@@ -175,9 +176,9 @@ This might happen because a log is usually a partial view of all the possible ex
 Let us consider the following log:
 \begin{align*}
 %P 
-L^+ & = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} \\
+L^+ = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{b}, \mathsf{a} \rangle \ \} && 
 %N
-L^- & = \{\ \langle \mathsf{a} \rangle \ \}
+L^- = \{\ \langle \mathsf{a} \rangle \ \}
 \end{align*}
 %
 Alternative models that accept the traces in $L^+$ and discard the ones in $L^-$ are:
@@ -185,8 +186,8 @@ Alternative models that accept the traces in $L^+$ and discard the ones in $L^-$
 \begin{align*}
 %\mathsf{M_1} & = \{ \mathsf{existence(a),existence(b)}\} \\
 %\mathsf{M_2} & = \{ \mathsf{responded\_existence(a, b)}\}
-M_1 & = \{ \mathsf{existence(a),existence(b)}\} \\
-M_2 & = \{ \mathsf{responded\_existence(a, b)}\}
+M_1 = \{ \mathsf{existence(a),existence(b)}\} && 
+M_2 = \{ \mathsf{responded\_existence(a, b)}\}
 \end{align*}
 %
 Let us consider then the trace $\langle \mathsf{b} \rangle$, that was not recorded in the log. Model $M_1$ %$\mathsf{M_1}$
@@ -202,17 +203,17 @@ Example \ref{ex:unknownShapedDifferently} shows how traces not appearing in the 
 Let us consider the following log:
 \begin{align*}
 %P
-L^+ & = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle \ \} \\
+L^+  = \{\ \langle \mathsf{a}, \mathsf{b} \rangle,\ \langle \mathsf{a}, \mathsf{b}, \mathsf{c} \rangle, \langle \mathsf{a}, \mathsf{c}, \mathsf{b} \rangle \ \} &&
 %N
-L^- & = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
+L^-  = \{\ \langle \mathsf{a} \rangle, \langle \mathsf{a}, \mathsf{c} \rangle \ \}
 \end{align*}
 %
 Two non-equivalent models that accept the positive examples and reject the negative ones are:
 \begin{align*}
 %\mathsf{M_1} & = \{ \mathsf{response(a,b)}\} \\
 %\mathsf{M_2} & = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
-M_1 & = \{ \mathsf{response(a,b)}\} \\
-M_2 & = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
+M_1  = \{ \mathsf{response(a,b)}\} &&
+M_2  = \{ \mathsf{alternate\_response(a, b)}\} \tag*{$\square$}
 \end{align*}
 %\qed
 \end{example}
