--- a/introduction.tex
+++ b/introduction.tex
@@ -9,9 +9,9 @@
 If we focus on the way process discovery techniques see the model-extraction task, we can divide them into two broad categories. %\cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}. 
 The first category is constituted by works that tackle the problem of process discovery with one-class supervised learning techniques (see, e.g., \cite{2010-Aalst,2004-Aalst,2007-Gunther,2003-Weijters}). These works are driven by the assumption that all available log traces are instances of the process to be discovered. The second category comprises works that intend model-extraction as a two-class supervised task (see \cite{2009-Chesani,2009-Goedertier,2006-Maruster}), which is driven by the possibility of partitioning the log traces into two sets according to some business or domain-related criteria. Usually, these sets are referred to as \emph{positive} and \emph{negative} examples, and the goal is to learn a model that characterizes one set w.r.t.\ the other. Hereafter, we refer to miners of the first and second category as \emph{unary} and \emph{binary} miners, respectively. 
 
-Traditionally, the vast majority of works in the process discovery spectrum have followed the first approach. Nonetheless, few recent works \cite{deviant-tkde,2018-Ponce,DBLP:conf/bpm/SlaatsDB21} have highlighted the importance of addressing this challenge as a two-class supervised task with different motivations: first and foremost the actual existence of \emph{positive} and \emph{negative} examples in real use cases \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}; second, the need to balance \emph{accuracy} and \emph{recall} \cite{DBLP:conf/bpm/SlaatsDB21}; and third, the need to discover a particular process variant according to a domain-specific need (e.g., the process characterizing ``fast'' traces) against the one that characterizes other variants, thus using the labels \emph{positive} and \emph{negative} to distinguish between two classes of examples \cite{deviant-tkde}.  
+Traditionally, the vast majority of works in the process discovery spectrum have followed the first approach. Nonetheless, few recent works \cite{deviant-tkde,2018-Ponce,DBLP:conf/bpm/SlaatsDB21} have highlighted the importance of addressing this challenge as a two-class supervised task with different motivations: first, the actual existence of \emph{positive} and \emph{negative} examples in real use cases \cite{2018-Ponce,DBLP:conf/bpm/SlaatsDB21}; second, the need to balance \emph{accuracy} and \emph{recall} \cite{DBLP:conf/bpm/SlaatsDB21}; and third, the need to discover a particular process variant (e.g., the process characterizing ``fast'' traces) against the one that characterizes other variants, thus using the labels \emph{positive} and \emph{negative} to distinguish between two classes of examples \cite{deviant-tkde}.  
 
-A problem that remains unsolved in process discovery, in general, and in binary miners, in particular, is the need to select, among all possible discovered models, the ones that fit better the expectations of \chiara{expert users, that is, users who are knowledgeable about the specific domain and because of this have specific desiderata and expectations}. This is somehow true for the traditional discovery of procedural and declarative models, where the discovered model that accepts all the positive examples is usually too complex (e.g., too spaghetti like), and mechanisms are introduced to ``select'' specific behaviors. Examples of criteria for this selection can be the frequency of a certain element (e.g., an activity or a path), or the presence of certain modeling patterns (e.g., a specific declarative pattern).   
+A problem that remains unsolved in process discovery, in general, and in binary miners, in particular, is the need to select, among all possible discovered models, the ones that fit better the expectations of \chiara{expert users, that is, users who are knowledgeable about the specific domain and because of this have specific desiderata and expectations}. This is true for the traditional discovery of procedural and declarative models, where the discovered model that accepts all the positive examples is usually too complex (e.g., too spaghetti like), and mechanisms are introduced to ``select'' specific behaviors. Examples of criteria for this selection can be the frequency of a certain element (e.g., an activity or a path), or the presence of certain modeling patterns (e.g., a specific declarative pattern).   
 The problem becomes even more compelling when we approach process discovery as a two-class supervised task. In fact, as recently shown in \cite{DBLP:conf/bpm/SlaatsDB21}, perfect binary miners, able to discover models that accept all positive examples and none of the negative examples, do not necessarily exist. In such cases, many sub-optimal models can be returned, leading to the issue of identifying criteria for preferring one model or the other.
  
 In this paper, we address the problem of inserting \chiara {expert user} preferences, \chiara{(hereafter expert preferences)} in the discovery of declarative process models as a two-class supervised task. We start from a recent work \cite{deviant-tkde} that introduces the \nd binary miner for the \declare modeling language \cite{DBLP:conf/edoc/PesicSA07} (introduced in Section \ref{sec:prel}). Being \nd based on the logic-based framework ASP \cite{asp-intro}, it provides a formal framework with a clear semantics that allows the users to ``prioritize'' the discovery results. In this work, we extend \nd by introducing the \asprin tool \cite{DBLP:conf/aaai/BrewkaD0S15}, so as to support the notion of \chiara{expert} preferences while remaining within the context of a formal, logic-based semantics. The following contributions are provided:
