Removed the comments for teh final upload to edoc2022

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -116,7 +116,9 @@ M_2 = \{ \ &  \mathsf{ absence2(Initial\ rejection)} \\
 Model $M_2$ %$\mathsf{M_2}$
 highlights the fact that some negative traces can be distinguishable from the positive ones because of the repetition of \textsf{Initial Rejection}: some traces, indeed, reported the execution of the activity twice, thus indicating an attention point for the process analyst.
 
-\chiara{Finally, we did compare the effect of discovering models with or without the two preferred activities. For this we asked \nd to extract 10 optimal\todo{Lasciamo optimal?} models with no preferences, 10 with the  \textsf{Architect Review} preference and 10 with the \textsf{Initial Rejection} preference, and we pairwise compared the models with no preference and the ones with a preferred activity. When imposing no preferences, activity \textsf{Architect Review} shows up in only 4 of the 10 discovered models. Imposing the usage of \textsf{Initial Rejection} is instead ``unnecessary'' (a posteriori), as this activity is also present in all 10 models discovered without specifying any preference.}
+\chiara{Finally, we did compare the effect of discovering models with or without the two preferred activities. For this we asked \nd to extract 10 optimal
+%\todo{Lasciamo optimal?}
+models with no preferences, 10 with the  \textsf{Architect Review} preference and 10 with the \textsf{Initial Rejection} preference, and we pairwise compared the models with no preference and the ones with a preferred activity. When imposing no preferences, activity \textsf{Architect Review} shows up in only 4 of the 10 discovered models. Imposing the usage of \textsf{Initial Rejection} is instead ``unnecessary'' (a posteriori), as this activity is also present in all 10 models discovered without specifying any preference.}
 
 %%%Model M2:\\
 %%%
@@ -185,7 +187,9 @@ the \textsf{precedence} constraint in the first model. The difference between th
 ). It is then up to the domain expert to prefer a stricter or a more general behavior.
 %, knowing that in this case such a choice would not affect the resulting model.
 
-\chiara{Finally, we did compare the effect of discovering models with or without the two preferred templates, by extracting 10 optimal\todo{Lasciamo optimal?} models with no template preferences, and 10 each with the \textsf{Precedence} and \textsf{Succession} preference respectively. Interestingly enough, imposing the \textsf{Precedence} preference results in being extremely useful in this scenario. In fact, none of the 10 models discovered with no preferred template did contain a \textsf{Precedence} pattern. Similarly with \textsf{Succession}, which appears in only 1 of the 10 models discovered without specifying any preference.}
+\chiara{Finally, we did compare the effect of discovering models with or without the two preferred templates, by extracting 10 optimal
+%\todo{Lasciamo optimal?}
+models with no template preferences, and 10 each with the \textsf{Precedence} and \textsf{Succession} preference respectively. Interestingly enough, imposing the \textsf{Precedence} preference results in being extremely useful in this scenario. In fact, none of the 10 models discovered with no preferred template did contain a \textsf{Precedence} pattern. Similarly with \textsf{Succession}, which appears in only 1 of the 10 models discovered without specifying any preference.}
 
 %%%For the models of the previous example we report the number of traces and paths violated by each constraint:
 %%%
