--- a/main.tex
+++ b/main.tex
@@ -38,8 +38,10 @@
 
 %\usepackage{newtxtext}
 
-\newcommand\chiara[1]{{\color{blue}{#1}}\xspace}
-\newcommand\federico[1]{{\color{brown}{#1}}\xspace}
+%\newcommand\chiara[1]{{\color{blue}{#1}}\xspace}
+%\newcommand\federico[1]{{\color{brown}{#1}}\xspace}
+\newcommand\chiara[1]{{#1}\xspace}
+\newcommand\federico[1]{{#1}\xspace}
 
 \usepackage{amssymb,amsmath}
 \newcommand{\nd}{\texttt{NegDis}\xspace}
