--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@
 \begin{document}
 %
 %\title{A literature-based business process meta-model}
-\title{Shape Your Process: Discovering Business Processes from Positive and Negative Traces Taking into Account  User Preferences}
+\title{Shape Your Process: Discovering Declarative Business Processes from Positive and Negative Traces Taking into Account User Preferences}
 %\title{Digging into BPM meta-models: criticalities and ideas towards solutions}
 
 %
