aggiunti acks a camera ready

--- a/main.tex
+++ b/main.tex
@@ -137,6 +137,11 @@ In this work, we present an approach for the discovery of declarative models pro
 
 \input{conclusions}
 
+\subsubsection*{Acknowledgments.} This work has been partially
+supported by the European Union’s H2020 projects HumaneAI-Net (g.a.
+952026), StairwAI (g.a. 101017142), and TAILOR (g.a. 952215).
+
+
 % \input{metamodel}
 %
 % \input{discussion}
