--- a/relatedWork.tex
+++ b/relatedWork.tex
@@ -26,7 +26,7 @@ Particularly relevant for our work is the contribution by Slaats et al. \cite{DB
 Our notion of negative example is similar to the definitions of syntactical and semantic noise of \cite{2009-Gunther} since our approach is able to extract both the syntactic information that characterizes the positive examples w.r.t. negative ones, and the relevant semantic difference between traces that have been partially or totally modified at a certain point in time.
 %As a minor point, we also might notice that these works provides in output LTL formulas, while we opt for Declare formulas with LTL$_f$ semantics.
 %
-In this sense, our work is also closely related to deviance mining approaches \cite{2016-Nguyen,DBLP:journals/kbs/TaymouriRDM21}, i.e., techniques to extract the relevant details characterizing those traces %showing a sequence of activities
+In this sense, our work is also closely related to deviance mining approaches \cite{2016-Nguyen}, i.e., techniques to extract the relevant details characterizing those traces %showing a sequence of activities
 that deviate from the expected behavior. Whereas some deviance mining approaches \cite{2014-Suriadi,2014-Armas} focus on the differences between models discovered from deviant and non-deviant traces, others~\cite{2013-Suriadi,2015-Partington,2013-Bose,2007-Lo,DBLP:journals/corr/abs-2111-12454} intend deviance mining as a sort of sequence classification for the discovery of activity patterns discriminating between different sets of traces. %: to discover patterns of activities that distinguish different types of traces.
 
 %inserting user preferences in the discovery of declarative process models  as a two-class supervised task. In particular we start from a recent work \cite{deviant-arxiv} that introduces the \nd binary miner for the \declare \cite{2009-Aalst} modeling language. We show how to extend it with preference mechanisms able to increase the role of the users in obtaining their preferred models
